demo-openwallet-sdk/k8s/namespace-and-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: marty-openwallet-demo
  labels:
    name: marty-openwallet-demo
    app.kubernetes.io/part-of: marty-platform
    demo.type: openwallet-foundation
